--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-Data from year 1997 to 2015 and the attributes are as following,
+Data labels from year 1997 to 2015 and the attributes are as following,
 
 Max Temperature
 
@@ -23,4 +23,5 @@ Min Visibility
 Mean Wind Speed
 
 
-Here Neural Networks with backpropagation and predict the weather and Keras library for the same.
+Here Neural Networks with backpropagation is used and the algorithm predicts the correct weather. For the implementation
+Keras library is used.
